--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -105,9 +105,11 @@
 \bibliographystyle{IEEEtran} 
 % \bibliographystyle{andolab2}
 
+% 参考文献のヘッダを正しくする用
 \bibhead
 \bibchap{}
 
-\bibliography{ref_swopp}
+% 参考文献
+\bibliography{ref}
 
 \end{document}
