--- a/thesis/ref.bib
+++ b/thesis/ref.bib
@@ -1,440 +1,422 @@
-
-// NOTE: IEEE Xplore と ACM でフォーマットが統一されていないので，
-//       ちゃんと確認すること！
-
-// 文献の種類：
-// inproceedings:   会議の議事録
-// article:         雑誌
-
-@inproceedings{Ferdman2011,
-    author = {Ferdman, Michael and Kaynak, Cansu and Falsafi, Babak},
-    title = {Proactive Instruction Fetch},
-    booktitle = {Proceedings of the 44th International Symposium on Microarchitecture},
-    year = {2011},
-    pages = {152--162},
-    month = {December},
+@Article{Cortex-A15-NVIDEA,
+  author = 	 {NVIDIA},
+  title = 	 {{NVIDIA} {Tegra} 4 Family {CPU} Architecture},
+  journal = 	 {Whitepaper},
+  year = 	 {2013},
+  note = 	 {https://www.nvidia.com/docs/IO//116757/NVIDIA/ \_Quad\_a15\_whitepaper\_FINALv2.pdf},
 }
 
-@inproceedings{ptask2016,
-    author = {Kallurkar, Prathmesh and R. Sarangi, Smruti},
-    year = {2016},
-    month = {October},
-    pages = {1--12},
-    booktitle = {Proceedings of the 49th International Symposium on Microarchitecture},
-    title = {{pTask}: A smart prefetching scheme for {OS} intensive applications}
+@InProceedings{Iwahara-SACSIS2010,
+  author = 	 {岩原佑磨 and 安藤秀樹},
+  title = 	 {リオーダ・バッファのハードウェア量と消費エネルギーの削減},
+  booktitle = {2010年先進的計算基盤システムシンポジウムSACSIS},
+  year = 	 {2010年5月},
+  pages = 	 {37-44},
+  OPTmonth = 	 {},
 }
 
-@article{gem5,
-    author = {Binkert, Nathan and Beckmann, Bradford and Black, Gabriel and Reinhardt, Steven K. and Saidi, Ali and Basu, Arkaprava and Hestness, Joel and Hower, Derek R. and Krishna, Tushar and Sardashti, Somayeh and Sen, Rathijit and Sewell, Korey and Shoaib, Muhammad and Vaish, Nilay and Hill, Mark D. and Wood, David A.},
-    title = {The Gem5 Simulator},
-    month = {August},
-    year = {2011},
-    pages = {1--7},
+@Book{Weste2010,
+  author =	 {N. H. E. Weste and D. M. Harris},
+  title = 	 {{CMOS VLSI} Design: A Circuits and Systems Perspective, 4th edition},
+  publisher = 	 {Addition Wesley},
+  year = 	 {2010}
 }
 
-@inproceedings{Kaynak2015,
-    author = {Kaynak, Cansu and Grot, Boris and Falsafi, Babak},
-    title = {Confluence: Unified Instruction Supply for Scale-out Servers},
-    booktitle = {Proceedings of the 48th International Symposium on Microarchitecture},
-    year = {2015},
-    pages = {166--177},
-    month = {December}
-} 
-
-@inproceedings{Atta2012,
-    author = {Atta, Islam and Tozun, Pinar and Ailamaki, Anastasia and Moshovos, Andreas},
-    title = {{SLICC}: Self-Assembly of Instruction Cache Collectives for {OLTP} Workloads},
-    booktitle = {Proceedings of the 45th International Symposium on Microarchitecture},
-    year = {2012},
-    pages = {188--198},
-    month = {December}
-} 
-
-@inproceedings{Zhu2015,
-    author = {Zhu, Yuhao and Richins, Daniel and Halpern, Matthew and Reddi, Vijay Janapa},
-    title = {Microarchitectural Implications of Event-driven Server-side Web Applications},
-    booktitle = {Proceedings of the 48th International Symposium on Microarchitecture},
-    year = {2015},
-    pages = {762--774},
-    month = {December}
-} 
-
-@inproceedings{Shioya2014,
-    author = {R. Shioya and H. Ando},
-    booktitle = {Proceedings of the 32nd International Conference on Computer Design},
-    title = {Energy efficiency improvement of renamed trace cache through the reduction of dependent path length},
-    year = {2014},
-    pages = {416--423},
-    month = {October},
+@TechReport{CACTI-1,
+  author = 	 {S. J. E. Wilton and N. P. Jouppi},
+  title = 	 {An Enhanced Access and Cycle Time Model for On-Chip Caches},
+  institution =  {Digital Equipment Corporation, The Western Research Laboratory},
+  year = 	 {1994},
 }
 
-@inproceedings{Shioya2010,
-    author = {Shioya, Ryota and Horio, Kazuo and Goshima, Masahiro and Sakai, Shuichi},
-    title = {Register Cache System Not for Latency Reduction Purpose},
-    booktitle = {Proceedings of the 43rd International Symposium on Microarchitecture},
-    year = {2010},
-    pages = {301--312},
-    month = {December}
+@InProceedings{Khan2010,
+  author = 	 {S. Khan and S. Hamdioui},
+  title = 	 {Temperature Dependence of {NBTI} Induced Delay},
+  booktitle = {Proceedings of the 2010 IEEE 16th International On-Line Testing Symposium},
+  year = 	 {2010},
+  pages = 	 {15-20},
+  month = 	 {July},
 }
 
-@inproceedings{Ferdman2008,
-    author={M. Ferdman and T. F. Wenisch and A. Ailamaki and B. Falsafi and A. Moshovos},
-    booktitle={Proceedings of the 41st International Symposium on Microarchitecture},
-    title={Temporal instruction fetch streaming},
-    year={2008},
-    pages={1--10},
-    month={November},
+@InProceedings{Monsieur2001,
+  author = 	 {F. Monsieur and E. Vincent and D. Roy and S. Bruyre and G. Pananakakis and G. Ghibaudo},
+  title = 	 {Time to Breakdown and Voltage to Breakdown Modeling for Ultra-thin Oxides ({Tox$<$32\AA})},
+  booktitle = {Proceedings of the 2001 IEEE International Integrated Reliability Workshop},
+  year = 	 {2001},
+  pages = 	 {20-25},
+  month = 	 {October},
 }
 
-@inproceedings{Kaynak2013,
-    author = {Kaynak, Cansu and Grot, Boris and Falsafi, Babak},
-    title = {{SHIFT}: Shared History Instruction Fetch for Lean-core Server Processors},
-    booktitle = {Proceedings of the 46th International Symposium on Microarchitecture},
-    year = {2013},
-    pages = {272--283},
-    month = {December}
-} 
-
-@inproceedings{Reinman1999,
-    author = {Reinman, Glenn and Calder, Brad and Austin, Todd},
-    title = {Fetch Directed Instruction Prefetching},
-    booktitle = {Proceedings of the 32nd International Symposium on Microarchitecture},
-    year = {1999},
-    pages = {16--27},
-    month = {December},
-} 
-
-@inproceedings{Kumar2018,
-    author = {Kumar, Rakesh and Grot, Boris and Nagarajan, Vijay},
-    title = {Blasting Through the Front-End Bottleneck with Shotgun},
-    booktitle = {Proceedings of the 23rd International Conference on Architectural Support for Programming Languages and Operating Systems},
-    year = {2018},
-    pages = {30--42},
-    month = {March}
+@Article{Black1969,
+  author = 	 {J.R. Black},
+  title = 	 {Electromigration--A Brief Survey and Some Recent Results},
+  journal = 	 {IEEE Transactions on Electron Devices},
+  year = 	 {1969},
+  volume = 	 {ED-16},
+  number = 	 {4},
+  pages = 	 {338-347.},
+  month = 	 {April},
 }
 
-@inproceedings{Kumar2017, 
-    author={R. Kumar and C. C. Huang and B. Grot and V. Nagarajan}, 
-    booktitle={Proceedings of the 23th International Symposium on High-Performance Computer Architecture}, 
-    title={Boomerang: A Metadata-Free Architecture for Control Flow Delivery}, 
-    year={2017}, 
-    pages={493-504}, 
-    month={February},
+@Article{Viswanath2000,
+  author = 	 {R. Viswanath and V. Wakharkar and A. Watwe and V. Lebonheur},
+  title = 	 {Thermal Performance Challenges from Silicon to Systems},
+  journal = 	 {Intel Technology Journal},
+  year = 	 {2000},
+  volume = 	 {4},
+  number = 	 {3},
+  pages = 	 {1-16},
+  month = 	 {August},
 }
 
-@inproceedings{Ranganathan1998,
-    author = {Ranganathan, Parthasarathy and Gharachorloo, Kourosh and Adve, Sarita V. and Barroso, Luiz Andr{\'e}},
-    title = {Performance of Database Workloads on Shared-memory Systems with Out-of-order Processors},
-    booktitle = {Proceedings of the 8th International Conference on Architectural Support for Programming Languages and Operating Systems},
-    year = {1998},
-    pages = {307--318},
-    month = {December},
-} 
-
-@inproceedings{Burcea2009,
-    author = {Burcea, Ioana and Moshovos, Andreas},
-    title = {Phantom-BTB: A Virtualized Branch Target Buffer Design},
-    booktitle = {Proceedings of the 14th International Conference on Architectural Support for Programming Languages and Operating Systems},
-    year = {2009},
-    pages = {313--324},
-    month = {March},
+@InProceedings{li-swopp2018,
+  author = 	 {李虹希 and 塩谷亮太 and 安藤秀樹},
+  title = 	 {{SRAM}の電力/遅延シミュレータ{CACTI}へのシングルエンド方式の対応},
+  booktitle = {情報処理学会研究報告},
+  year = 	 {2018年8月},
+  volume = 	 {2018-ARC-???},
+  number = 	 {??},
+  OPTpages = 	 {},
+  OPTmonth = 	 {},
 }
 
-@article{Seznec2007,
-  title={The {L-TAGE} Branch Predictor},
-  author={Andr{\'e} Seznec},
-  journal={J. Instruction-Level Parallelism},
-  year={2007},
-  volume={9}
+@InProceedings{Pille-Power7-SRAM2000,
+  author = 	 {J. Pille and D. Wendel and O. Wagner and R. Sautter and W. Penth and T. Froehnel and S. Buettner and O. Torreiter and M. Eckert and J. Paredes and D. Hrusecky and D. Ray M. Canada},
+  title = 	 {A {32kB 2R/1W L1} data cache in 45nm {SOI} technology for the {POWER7} processor},
+  booktitle = {Digest of Technical Papers, 2010 IEEE International Solid-State Circuits Conference},
+  year = 	 {2000},
+  pages = 	 {344-345},
+  month = 	 {February},
 }
 
-@inproceedings{RDIP, 
-    author={A. Kolli and A. Saidi and T. F. Wenisch}, 
-    booktitle={Proceedings of the 46th International Symposium on Microarchitecture}, 
-    title={{RDIP}: Return-address-stack Directed Instruction Prefetching}, 
-    year={2013}, 
-    pages={260--271}, 
-    month={December},
+@Misc{cacti,
+  howpublished = {http://www.hpl.hp.com/research/cacti/},
 }
 
-@inproceedings{Bungee, 
-    author={D. S. McFarlin and C. Zilles}, 
-    booktitle={Proceedings of the 48th International Symposium on Microarchitecture}, 
-    title={Bungee jumps: Accelerating indirect branches through {HW/SW} co-design}, 
-    year={2015}, 
-    pages={370--382}, 
-    month={December},
+@Misc{MOSIS-SCMOS,
+  howpublished = {https://www.mosis.com/files/scmos/scmos.pdf},
 }
 
-@inproceedings{Spracklen2005,
-    author = {Spracklen, Lawrence and Chou, Yuan and Abraham, Santosh G.},
-    title = {Effective Instruction Prefetching in Chip Multiprocessors for Modern Commercial Applications},
-    booktitle = {Proceedings of the 11th International Symposium on High-Performance Computer Architecture},
-    year = {2005},
-    pages = {225--236},
-    month = {February},
+@Misc{Agehara-thesis2019,
+  author = 	 {揚原怜},
+  title = 	 {分離リオーダ・バッファにおける電力削減の回路レベルの評価},
+  howpublished = {電気電子・情報工学科, 卒業論文},
+  year = 	 {2019年3月},
 }
 
-@inproceedings{Chou2007,
-    author = {Chou, Yuan},
-    title = {Low-Cost Epoch-Based Correlation Prefetching for Commercial Applications},
-    booktitle = {Proceedings of the 40th International Symposium on Microarchitecture},
-    year = {2007},
-    pages = {301--313},
-    month = {December},
-} 
-
-@inproceedings{Burcea2008,
-    author = {Burcea, Ioana and Somogyi, Stephen and Moshovos, Andreas and Falsafi, Babak},
-    title = {Predictor Virtualization},
-    booktitle = {Proceedings of the 13th International Conference on Architectural Support for Programming Languages and Operating Systems},
-    year = {2008},
-    pages = {157--167},
-    month = {March},
+@InProceedings{Li-BVF2017,
+  author = 	 {A. Li and W. Zhao and S. L. Song},
+  title = 	 {{BVF}: enabling significant on-chip power savings via bit-value-favor for throughput processors},
+  booktitle = {Proceedings of the 50th Annual IEEE/ACM International Symposium on Microarchitecture},
+  year = 	 {2017},
+  pages = 	 {532-545},
+  month = 	 {October},
 }
 
-@inproceedings{Stark1997,
-    author = {Stark, Jared and Racunas, Paul and Patt, Yale N.},
-    title = {Reducing the Performance Impact of Instruction Cache Misses by Writing Instructions into the Reservation Stations Out-of-order},
-    booktitle = {Proceedings of the 30th International Symposium on Microarchitecture},
-    year = {1997},
-    pages = {34--43},
-    month = {December},
-} 
-
-@inproceedings{Luk1998,
-    author = {Luk, Chi-Keung and Mowry, Todd C.},
-    title = {Cooperative Prefetching: Compiler and Hardware Support for Effective Instruction Prefetching in Modern Processors},
-    booktitle = {Proceedings of the 31st International Symposium on Microarchitecture},
-    year = {1998},
-    pages = {182--194},
-    month = {December},
+@Misc{Alpha-manual2002,
+  author = 	 {Compaq},
+  title = 	 {Alpha Architecture Reference Manual, Fourth Edition},
+  month = 	 {January},
+  year = 	 {2002},
 }
 
-@inproceedings{Huang2016,
-    author = {Huang, Ziqiang and Hilton, Andrew D. and Lee, Benjamin C.},
-    title = {Decoupling Loads for Nano-instruction Set Computers},
-    booktitle = {Proceedings of the 43rd International Symposium on Computer Architecture},
-    year = {2016},
-    pages = {406--417},
-    month = {June},
-} 
-
-@inproceedings{Chadha2014,
-    author = {Chadha, Gaurav and Mahlke, Scott and Narayanasamy, Satish},
-    title = {{EFetch}: Optimizing Instruction Fetch for Event-driven Web applications},
-    booktitle = {Proceedings of the 23rd International Conference on Parallel Architectures and Compilation},
-    year = {2014},
-    pages = {75--86},
-    month={February},
-} 
-
-@inproceedings{Annavaram2001,
-    author = {Annavaram, Murali and Patel, Jignesh M. and Davidson, Edward S.},
-    title = {Call Graph Prefetching for Database Applications},
-    booktitle = {Proceedings of the 7th International Symposium on High-Performance Computer Architecture},
-    year = {2001},
-    pages = {281--290},
-    month={January}
+@Misc{simplescalar-readme-def,
+  OPTkey = 	 {},
+  author = 	 {T. Austin},
+  title = 	 {SimpleScalar DEF File Format Overview},
+  howpublished = {http://www.simplescalar.com/docs/README-def.txt},
+  OPTmonth = 	 {},
+  year = 	 {2003},
+  OPTnote = 	 {},
+  OPTannote = 	 {}
 }
 
-@inproceedings{Ramirez2002,
-    author = {Ramirez, Alex and Santana, Oliverio J. and Larriba-Pey, Josep L. and Valero, Mateo},
-    title = {Fetching Instruction Streams},
-    booktitle = {Proceedings of the 35th International Symposium on Microarchitecture},
-    year = {2002},
-    pages = {371--382},
-    month = {December},
+@techreport{palacharla96,
+author =         "S. Palacharla and N. P. Jouppi and J. E. Smith",
+title =          "Quantifying the Complexity of Superscalar Processors",
+institution =    {University Wisconsin},
+number =         "CS-TR-1996-1328",
+year =           "1996",
+month =	         {November}
 }
 
-@inproceedings{Rotenberg1996, 
-    author={E. Rotenberg and S. Bennett and J. E. Smith}, 
-    booktitle={Proceedings of the 29th International Symposium on Microarchitecture}, 
-    title={Trace cache: a low latency approach to high bandwidth instruction fetching}, 
-    year={1996}, 
-    pages={24--34}, 
-    month={December},
+@Article{Pagiamtzis-CAMsurvey2006,
+  author = 	 {K. Pagiamtzis and A. Sheikholeslami},
+  title = 	 {Content-Addressable Memory ({CAM}) Circuits and Architectures: A Tutorial and Survey},
+  journal = 	 {IEEE Journal of Solid-State Circuits},
+  year = 	 {2006},
+  volume = 	 {41},
+  number = 	 {3},
+  pages = 	 {712-727},
+  month = 	 {March},
 }
 
-@inproceedings{Vaidya2008,
-    author    = {Pranav Vaidya and Jaehwan John Lee},
-    title     = {Characterization of {TPC-H} queries for a column-oriented database on a dual-core {AMD} {Athlon} processor},
-    booktitle = {Proceedings of the 17th ACM conference on Information and knowledge management},
-    pages     = {1411--1412},
-    year      = {2008},
-    month = {October},
+@InProceedings{Yamaguchi-ICCD2011,
+  author = 	 {K. Yamaguchi and Y. Kora and H. Ando},
+  title = 	 {Evaluation of Issue Queue Delay: Banking Tag RAM and Identifying Correct Critical Path},
+  OPTcrossref =  {},
+  OPTkey = 	 {},
+  booktitle = {Proceedings of the 29th International Conference on Computer Design},
+  year = 	 {2011},
+  pages = 	 {313-319},
+  month = 	 {October},
 }
 
-@inproceedings{Ferdman2012,
-    author = {Ferdman, Michael and Adileh, Almutaz and Kocberber, Onur and Volos, Stavros and Alisafaee, Mohammad and Jevdjic, Djordje and Kaynak, Cansu and Popescu, Adrian Daniel and Ailamaki, Anastasia and Falsafi, Babak},
-    title = {Clearing the Clouds: A Study of Emerging Scale-out Workloads on Modern Hardware},
-    booktitle = {Proceedings of the 17th International Conference on Architectural Support for Programming Languages and Operating Systems},
-    year = {2012},
-    pages = {37--48},
-    month = {March},
-} 
-
-@inproceedings{Sherwood2000,
-    author = {Sherwood, Timothy and Sair, Suleyman and Calder, Brad},
-    title = {Predictor-directed Stream Buffers},
-    booktitle = {Proceedings of the 33rd International Symposium on Microarchitecture},
-    year = {2000},
-    pages = {42--53},
-    month = {December},
-} 
-
-@article{Jouppi1990,
-    author = {Jouppi, Norman P.},
-    title = {Improving Direct-mapped Cache Performance by the Addition of a Small Fully-associative Cache and Prefetch Buffers},
-    journal = {SIGARCH Comput. Archit. News},
-    issue_date = {June 1990},
-    volume = {18},
-    number = {2SI},
-    month = {May},
-    year = {1990},
-    issn = {0163-5964},
-    pages = {364--373},
-} 
-
-@inproceedings{Menon2012, 
-    author={J. {Menon} and M. {de Kruijf} and K. {Sankaralingam}}, 
-    booktitle={Proceedings of the 39th Annual International Symposium on Computer Architecture}, 
-    title={iGPU: Exception support and speculative execution on GPUs}, 
-    year={2012}, 
-    pages={72-83}, 
-    month={June},
+@Article{Yamaguchi-IEICE2012,
+  author = 	 {K. Yamaguchi and Y. Kora and H. Ando},
+  title = 	 {Delay Evaluation of Issue Queue in Superscalar Processors with Banking Tag RAM and Correct Critical Path Identification},
+  journal = 	 {IEICE Transactions on Information and Systems},
+  year = 	 {2012},
+  volume = 	 {E95-D},
+  number = 	 {9},
+  pages = 	 {2235-2246},
+  month = 	 {September},
 }
 
-@inproceedings{Tsai2017, 
-    author={P. {Tsai} and N. {Beckmann} and D. {Sanchez}}, 
-    booktitle={Proceedings of the 44th Annual International Symposium on Computer Architecture}, 
-    title={Jenga: Software-defined cache hierarchies}, 
-    year={2017}, 
-    pages={652--665}, 
-    month={June},
+@Article{Abella:survey2003,
+  author = 	 {J. Abella and R. Canal and A. Gonzalez},
+  title = 	 {Power- and Complexity-aware Issue Queue Designs},
+  journal = 	 {IEEE Micro},
+  year = 	 {2003},
+  volume = 	 {23, Issue 5},
+  number = 	 {5},
+  OPTpages = 	 {},
+  month = 	 {September-October},
 }
 
-@inproceedings{Ajorpaz2018,
-    author = {Ajorpaz, Samira Mirbagher and Garza, Elba and Jindal, Sangam and Jim{\'e}nez, Daniel A.},
-    title = {Exploring Predictive Replacement Policies for Instruction Cache and Branch Target Buffer},
-    booktitle = {Proceedings of the 45th Annual International Symposium on Computer Architecture},
-    year = {2018},
-    pages = {519--532},
-    month = {June}
+@InProceedings{ernst2002,
+  author = 	 {D. Ernst and T. Austin},
+  title = 	 {Efficient Dynamic Scheduling Through Tag Ellimination},
+  booktitle =	 {Proceedings of the 29th Annual International Symposium on Computer Architecture},
+  pages =	 {37-46},
+  year =	 {2002},
+  month =	 {May}
 }
 
-@inproceedings{Khan2010,
-    author = {Khan, Samira Manabi and Tian, Yingying and Jimenez, Daniel A.},
-    title = {Sampling Dead Block Prediction for Last-Level Caches},
-    booktitle = {Proceedings of the 43rd Annual International Symposium on Microarchitecture},
-    year = {2010},
-    pages = {175--186},
-    month = {December}
-} 
-
-@inproceedings{Buyuktosunoglu2003, 
-    author={A. {Buyuktosunoglu} and T. {Karkhanis} and D. H. {Albonesi} and {Pradip Bose}}, 
-    booktitle={Proceedings of the 30th Annual International Symposium on Computer Architecture}, 
-    title={Energy efficient co-adaptive instruction fetch and issue}, 
-    year={2003}, 
-    pages={147--156}, 
-    month={June},
+@inproceedings{folegnani2001,
+  author = {D. Folegnani and A. Gonz\'alez},
+  title = {Energy-effective issue logic},
+  booktitle = {Proceedings of the 28th Annual International Symposium on Computer Architecture},
+  pages = {230-239},
+  month = {June},
+  year = {2001}
 }
 
-@inproceedings{Ayers2019,
-    author = {Ayers, Grant and Nagendra, Nayana Prasad and August, David I. and Cho, Hyoun Kyu and Kanev, Svilen and Kozyrakis, Christos and Krishnamurthy, Trivikram and Litz, Heiner and Moseley, Tipp and Ranganathan, Parthasarathy},
-    title = {Asm{DB}: Understanding and Mitigating Front-end Stalls in Warehouse-scale Computers},
-    booktitle = {Proceedings of the 46th International Symposium on Computer Architecture},
-    year = {2019},
-    pages = {462--473},
-    month = {June}
+@inproceedings{ponomarev2001,
+  author = {D. Ponomarev and G. Kucuk and K. Ghose},
+  title = {Reducing Power Requirements of Instruction Scheduling Through Dynamic Allocation of Multiple Datapath Resources},
+  booktitle = {Proceedings of the 34th Annual International Symposium on Microarchitecture},
+  pages = {90-101},
+  month = {December},
+  year = {2001}
 }
 
-@inproceedings{Jaleel2010,
-    author = {Jaleel, Aamer and Theobald, Kevin B. and Steely,Jr., Simon C. and Emer, Joel},
-    title = {High Performance Cache Replacement Using Re-reference Interval Prediction ({RRIP})},
-    booktitle = {Proceedings of the 37th International Symposium on Computer Architecture},
-    year = {2010},
-    pages = {60--71},
-} 
-
-@inproceedings{Bharadwaj2018,
-    author = {Bharadwaj, Srikant and Cox, Guilherme and Krishna, Tushar and Bhattacharjee, Abhishek},
-    year = {2018},
-    month = {October},
-    pages = {271-284},
-    title = {Scalable Distributed Last-Level {TLB}s Using Low-Latency Interconnects},
-    booktitle={Proceedings of the 51st Annual International Symposium on Microarchitecture},
+@InProceedings{michaud2001,
+  author = 	 {P. Michaud and A. Seznec},
+  title = 	 {Data-flow Prescheduling for Large Instruction Windows in Out-of-order Processors},
+  booktitle =	 {Proceedings of the 7th International Symposium on High-Performance Computer Architecture},
+  pages =	 {27-36},
+  year =	 2001,
+  month =	 {January}
 }
 
-@inproceedings{John2012,
-    author={J. {Sartori} and B. {Ahrens} and R. {Kumar}},
-    booktitle={Proceedings of the 18th International Symposium on High Performance Computer Architecture},
-    title={Power balanced pipelines},
-    year={2012},
-    pages={1-12},
-    month={February},
+@InProceedings{raasch2002,
+  author = 	 {S. E. Raasch and N. L. Binkert and S. K. Reinhardt},
+  title = 	 {A Scalable Instruction Queue Design Using Dependence Chains},
+  booktitle =	 {Proceedings of the 29th Annual International Symposium on Computer Architecture},
+  pages =	 {318-329},
+  year =	 2002,
+  month =	 {May}
 }
 
-@inproceedings{Tiwari2007,
-    author = {Tiwari, Abhishek and Sarangi, Smruti R. and Torrellas, Josep},
-    title = {{ReCycle}:: Pipeline Adaptation to Tolerate Process Variation},
-    booktitle = {Proceedings of the 34th Annual International Symposium on Computer Architecture},
-    year = {2007},
-    pages = {323--334},
-    month = {June},
-} 
-
-@inproceedings{Lin2018,
-    author={B. {Lin} and M. B. {Healy} and R. {Miftakhutdinov} and P. G. {Emma} and Y. {Patt}},
-    booktitle={Proceedings of the 51st Annual International Symposium on Microarchitecture},
-    title={Duplicon Cache: Mitigating Off-Chip Memory Bank and Bank Group Conflicts Via Data Duplication},
-    year={2018},
-    pages={285--297},
-    month={October},
+@InProceedings{Palacharla1997,
+  author = 	 {S. Palacharla and N. P. Jouppi and J. E. Smith},
+  title = 	 {Complexity-effective superscalar processors},
+  booktitle = 	 {Proceedings of the 24th Annual International Symposium on Computer Architecture},
+  year = 	 1997,
+  month =	 {June},
+  pages =	 {206-218},
 }
 
-@inproceedings{Lee1997,
-    author = {Lee, Chih-Chieh and Chen, I-Cheng K. and Mudge, Trevor N.},
-    title = {The Bi-mode Branch Predictor},
-    booktitle = {Proceedings of the 30th International Symposium on Microarchitecture},
-    year = {1997},
-    pages = {4--13},
-    month = {December},
-} 
-
-@inproceedings{Kroft1981,
-    author = {Kroft, David},
-    title = {Lockup-free Instruction Fetch/Prefetch Cache Organization},
-    booktitle = {Proceedings of the 8th Annual Symposium on Computer Architecture},
-    year = {1981},
-    pages = {81--87},
-    month = {May},
-} 
-
-@inproceedings{Ailamaki1999,
-    author = {Ailamaki, Anastassia and DeWitt, David J. and Hill, Mark D. and Wood, David A.},
-    title = {DBMSs on a Modern Processor: Where Does Time Go?},
-    booktitle = {Proceedings of the 25th International Conference on Very Large Data Bases},
-    year = {1999},
-    pages = {266--277},
-    month = {September},
-} 
-
-@article{Skylake_MPR,
-    author = {L. Gwennap},
-    title = {Skylake Speedshifts to next gear},
-    journal = {Microprocessor report},
-    year = {2015},
-    month = {September},
-    day = {7},
+@InProceedings{Alpha21464,
+  author = {R. P. Preston and R. W. Badeau and D. W. Bailey and S. L. Bell and L. L. Biro and W. J. Bowhill and D. E.  Dever and S. Felix and R. Gammack and V. Germini and M. K. Gowan and P. Gronowski and D. B. Jackson and S. Mehta and S. V. Morton and J. D. Pickholtz and M. H. Reilly and M. J. Smith},
+  title = {Design of an 8-wide Superscalar {RISC} Microprocessor with Simultaneous Multithreading},
+  booktitle = {2002 IEEE International Solid-State Circuits Conference, Digest of Technical Papers},
+  year = {2002},
+  pages = {334-472},
+  month = {February},
 }
 
-@inproceedings{Keeton1998,
- author = {Keeton, Kimberly and Patterson, David A. and He, Yong Qiang and Raphael, Roger C. and Baker, Walter E.},
- title = {Performance Characterization of a Quad {Pentium} {Pro} {SMP} Using {OLTP} Workloads},
- booktitle = {Proceedings of the 25th International Symposium on Computer Architecture},
- year = {1998},
- pages = {15--26},
- month = {June},
-} 
+@InProceedings{AMD-Bulldozer,
+  author = {M. Golden and S. Arekapudi and J. Vinh},
+  title = {40-Entry Unified Out-of-Order Scheduler and Integer Execution Unit for the {AMD} {Bulldozer} x86-64 Core},
+  booktitle = {2011 IEEE International Solid-State Circuits Conference, Digest of Technical Papers},
+  year = {2011},
+  pages = {80-82},
+  month = {February},
+}
+
+@Article{IBM-Power8,
+  author = 	 {B. Sinharoy and J. A. Van Norstrand and R. J. Eickemeyer and H. Q. Le and J. Leenstra and D. Q. Nguyen and B. Konigsburg and K. Ward and M. D. Brown and J. E. Moreira and D. Levitan and S. Tung and D. Hrusecky and J. W. Bishop and M. Gschwind and M. Boersma and M. Kroener and M. Kaltenbacha and T. Karkhanis and K. M. Fernsler},
+  title = 	 {{IBM POWER8} Processor Core Microarchitecture},
+  journal = 	 {IBM Journal of Research and Development},
+  year = 	 {2015},
+  volume = 	 {59, issue 1},
+  OPTnumber = 	 {},
+  pages = 	 {2:1 - 2:21},
+  month = 	 {January - February},
+}
+
+@Inproceedings{Kora2013,
+  author =	 {Y. Kora and K. Yamaguchi and H. Ando},
+  title = 	 {{MLP}-aware Dynamic Instruction Window Resizing for Adaptively Exploiting Both {ILP} and {MLP}},
+  booktitle = {Proceedings of the 46th Annual International Symposium on Microarchitecture},
+  pages = {37-48},
+  year = 	 {2013},
+  month = {December}
+}
+
+@inproceedings{Ando2019,
+author = {Ando, Hideki},
+title = {{SWQUE}: A Mode Switching Issue Queue with Priority-correcting Circular Queue},
+booktitle = {Proceedings of the 52nd Annual International Symposium on Microarchitecture},
+pages = {506--518},
+year = {2019},
+month = {October}
+}
+
+@ARTICLE{CAM-survay,  
+author={K. {Pagiamtzis} and A. {Sheikholeslami}},  
+journal={IEEE Journal of Solid-State Circuits},  
+title={Content-addressable memory (CAM) circuits and architectures: a tutorial and survey},   
+year={2006},  
+volume={41},  
+number={3},  
+pages={712-727}
+}
+  
+@inproceedings{Sembrant2015,
+author = {Sembrant, Andreas and Carlson, Trevor and Hagersten, Erik and Black-Shaffer, David and Perais, Arthur and Seznec, Andr\'{e} and Michaud, Pierre},
+title = {{Long Term Parking} ({LTP}): Criticality-aware Resource Allocation in OOO Processors},
+year = {2015},
+month = {December},
+booktitle = {Proceedings of the 48th International Symposium on Microarchitecture},
+pages = {334--346},
+}
+
+@inproceedings{Jimenez2001,
+  author={D. A. {Jimenez} and C. {Lin}},
+  booktitle={Proceedings of Seventh International Symposium on High-Performance Computer Architecture}, 
+  title={Dynamic Branch Prediction with Perceptrons}, 
+  year={2001},
+  month={January},
+  pages={197-206},
+}
+
+@INPROCEEDINGS{Motomura1990paper,
+  author={M. {Motomura} and J. {Toyoura} and K. {Hirata} and H. {Ooka} and H. {Yamada} and T. {Enomoto}},
+  booktitle={1990 37th IEEE International Conference on Solid-State Circuits},   
+  title={A 1.2-million Transistor, 33 MHz, 20-bit Dictionary Search Processor with a 160 kb {CAM}},   
+  year={1990},  
+  pages={90-91},
+}
+@ARTICLE{Motomura1990journal,  
+  author={M. {Motomura} and J. {Toyoura} and K. {Hirata} and H. {Ooka} and H. {Yamada} and T. {Enomoto}},  
+  journal={IEEE Journal of Solid-State Circuits},   
+  title={A 1.2-million Transistor, 33-MHz, 20-b Dictionary Search Processor ({DISP}) {ULSI} with a 160-kb {CAM}},   
+  year={1990},  
+  volume={25},  
+  number={5},  
+  pages={1158-1165},
+}
+
+@ARTICLE{Farrell1998,  
+  author={J. A. {Farrell} and T. C. {Fischer}},  
+  journal={IEEE Journal of Solid-State Circuits},   
+  title={Issue Logic for a 600-MHz Out-of-order Execution Microprocessor},   
+  year={1998},  
+  volume={33},  
+  number={5},  
+  pages={707-712},
+}
+
+@inproceedings{Stark2000,
+ author = {J. Stark and M. D. Brown and Y. N. Patt},
+ title = {On pipelining dynamic instruction scheduling logic},
+ booktitle = {Proceedings of the 33rd Annual International Symposium on Microarchitecture},
+ year = {2000},
+ month = {December},
+ pages = {57--66},
+}
+
+@inproceedings{goshima2001,
+  author = {M. Goshima and K. Nishino and T. Kitamura and Y. Nakashima and S. Tomita and S. Mori},
+  title = {A high-speed dynamic instruction scheduling scheme for superscalar processors},
+  booktitle = {Proceedings of the 34th Annual International Symposium on Microarchitecture},
+  pages = {225--236},
+  month = {December},
+  year = {2001}
+}
+
+@InProceedings{Lebeck2002,
+  author = 	 {A. R. Lebeck and J. Koppanalil and T. Li and J. Patwardhan and E. Rotenberg},
+  title = 	 {A Large, Fast Instruction Window for Tolerating Cache Misses},
+  booktitle =	 {Proceedings of the 29th Annual International Symposium on Computer Architecture},
+  pages =	 {59--70},
+  year =	 2002,
+  month =	 {May}
+}
+
+@InProceedings{Kim2003,
+  author = 	 {I. Kim and M. H. Lipasti},
+  title = 	 {Macro-op Scheduling: Relaxing Scheduling Loop Constraints},
+  booktitle = {Proceedings of the 36th Annual International Symposium on Microarchitecture },
+  pages = 	 {277-289},
+  year = 	 {2003},
+  month = 	 {December},
+}
+
+@InProceedings{Gibson2010,
+  author = 	 {D. Gibson and D. A. Wood},
+  title = 	 {Forwardflow: A scalable core for power-constrained {CMPs}},
+  booktitle = {Proceedings of the 37th Annual International Symposium on Computer Architecture},
+  pages = 	 {14-25},
+  year = 	 {2010},
+  month = 	 {June},
+}
+
+@ARTICLE{H.Homayoun2011,
+author={H. Homayoun and A. Sasan and J. Gaudiot and A. Veidenbaum},
+title={Reducing Power in All Major {CAM} and {SRAM}-Based Processor Units via Centralized, Dynamic Resource Size Management},
+journal={IEEE Transactions on Very Large Scale Integration (VLSI) Systems},
+year={2011},
+volume={19},
+number={11},
+pages={2081-2094},
+month={Nov},
+}
+
+@Misc{kobayashi-thesis,
+  author = 	 {小林誠弥},
+  title = 	 {発行キューにおけるタグの2段階比較による消費エネルギー削減},
+  howpublished = {名古屋大学大学院工学研究科博士課程(前期課程), 修士学位論文},
+  OPTmonth = 	 {},
+  year = 	 {2015年3月},
+}
+
+@Misc{matsuda-thesis,
+  author = 	 {松田　康誉},
+  title = 	 {ランダム発行キューにおけるタグの2段階比較による電力削減},
+  howpublished = {名古屋大学大学院工学研究科博士課程(前期課程), 修士学位論文},
+  OPTmonth = 	 {},
+  year = 	 {2020年3月},
+}
+
+@InProceedings{sassone2007,
+  author = 	 {P. G. Sassone and J. {Rupley II} and E. Brekelbaum and G. H. Loh and B. Black},
+  title = 	 {Matrix scheduler reloaded},
+  booktitle =	 {Proceedings of the 34th Annual International Symposium on Computer Architecture},
+  pages =	 {335--346},
+  year =	 2007,
+  month =	 {June}
+}
