--- a/thesis/src/introduction.tex
+++ b/thesis/src/introduction.tex
@@ -10,14 +10,11 @@
 発行キューの中で最も電力を消費する回路は，タグ比較の回路である．タグ比較は，発行幅分のディスティネーション・タグとすべてのソース・タグとの間で行われるため，非常に多くの電力を消費する．そこで本論文では，タグ比較器が動作する回数を削減する以下のような手法を提案する．
 \begin{itemize}
   \item 発行キューを複数の\textbf{セグメント}に分割する．命令を発行キューにディスパッチする際，第 1 ソース・タグの下位ビットが $n$ である命令は，第 $n$ 番目のセグメントに書き込む．タグ比較時には，ディスティネーション・タグの下位ビットがセグメント番号と一致するセグメントでのみ，第 1 ソース・タグの比較を行う．一致しないセグメントでは比較が行われない．これによりタグ比較回数が削減される．
-  \item 上記の方法では，第 2 ソース・タグの比較回数は削減されない．そこで提案手法では\textbf{スワップ}と\textbf{サブ・セグメント}と呼ぶ 2 つの方法を導入し，第 2 ソース・タグの比較回数も削減する．スワップは，ディスパッチ時に第 1 ソース・オペランドがレディで，第 2 ソース・オペランドがレディでない命令において，第 1 ソース・タグと第 2  ソース・タグを格納するフィールドを交換し，第 2 ソース・タグの下位ビットを用いてディスパッチするセグメントを決定する手法である．サブ・セグメントは，各セグメントを第 2 ソース・タグにもとづきさらに分割する手法である．
+  \item 上記の方法では，第 2 ソース・タグの比較回数は削減されない．そこで提案手法では\textbf{スワップ}と\textbf{サブ・セグメント}と呼ぶ 2 つの方法を導入し，第 2 ソース・タグの比較回数も削減する．スワップは，ディスパッチ時に第 1 ソース・オペランドがレディで，第 2 ソース・オペランドがレディでない命令において，第 1 ソース・タグと第 2  ソース・タグを格納するフィールドを交換し，第 2 ソース・タグの下位ビットを用いてディスパッチするセグメントを決定する手法である．サブ・セグメントは，各セグメントを第 2 ソース・タグに基づきさらに分割する手法である．
   \item セグメント化によりディスパッチできるエントリが制限されるため，発行キューの容量効率が低下し，容量に敏感なプログラムにおいて性能が低下するという問題が存在する．この問題に対応するため，本論文では \textbf{SWITCH} という手法を提案する．SWITCH では，容量効率を重視したディスパッチ・アルゴリズムと，タグ比較回数の削減を重視したディスパッチ・アルゴリズムを，容量効率の重要性に応じて切り替えて使用することにより，性能低下を抑制する．
 \end{itemize}
 
 提案手法を SPEC CPU 2017 ベンチマークを用いて評価し，性能低下を 最大でも 5\% 以下に抑えつつ，タグ比較の回数を平均で 82\% 削減できることを確認した．
 
 本論文の残りの構成は次の通りである．まず，\refchap{related_work}で関連研究を説明し， \refchap{basic_IQ}で発行キューの基本的な事項を説明する．そして，\refchap{segment_IQ}で提案手法の基本となるアイデアに関して説明したあと，\refchap{switch}で提案手法の問題点である発行キューの容量効率の低下とその対策方法を説明する．\refchap{eval}で評価を行い，\refchap{summary}でまとめる．
-
-
-% 本論文の構成は次の通りである．まず，\refchap{related_work}で関連研究を示す．\refchap{miss_assumed_pipeline}では MAP について説明する．その後，\refchap{hybrid_arc}で従来の構成と MAP を組み合わせたアーキテクチャについて述べ，\refchap{sw_algorithm}では提案するパイプラインの切り替えアルゴリズムについて述べる．\refchap{evaluation}では提案手法の評価を行い，最後に\refchap{summary}でまとめる．
 
